dark mode fix
problem z "mruganiem" białego ekranu

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,3 +99,261 @@ button:hover {
   background: var(--button-hover-light-color);
 }
 /* GLOBAL */
+
+.container-login {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-login .theme-container {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+button#theme-toggle {
+  background: var(--button-light-color);
+}
+
+.container-login .theme-container button#theme-toggle {
+  border-radius: 50%;
+  border: none;
+  width: 70px;
+  height: 70px;
+  padding: 20px;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.container-login .theme-container button#theme-toggle img {
+  width: 100%;
+}
+
+form#form-login-password,
+form#form-login-pin {
+  width: 30%;
+  height: 90%;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+  background: var(--background-container-light-color);
+  box-shadow: 0 0 10px var(--box-shadow-color);
+}
+
+form#form-login-password h2,
+form#form-login-pin h2 {
+  text-align: center;
+  font-size: 30px;
+  margin-top: 30px;
+}
+
+form#form-login-password .form-container,
+form#form-login-pin .form-container {
+  width: 100%;
+  height: calc(100% - 30px - 30px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 0 60px;
+}
+
+table#pin-keyboard {
+  width: 80%;
+}
+
+table#pin-keyboard .pin-key {
+  width: 100px;
+  height: 100px;
+  margin: 5px;
+  font-size: 28px;
+  background: var(--background-input-light-color);
+  color: var(--text-black-color);
+  transition: all 0.1s ease-in-out;
+  border: 1px solid var(--border-light-color);
+}
+
+table#pin-keyboard .pin-key:active {
+  background: var(--button-light-color);
+  color: var(--text-white-color);
+}
+
+table#pin-keyboard .pin-key-action {
+  background: var(--button-light-color);
+}
+
+table#pin-keyboard .pin-key-action:hover {
+  background: var(--button-hover-light-color);
+}
+
+table#pin-keyboard .pin-key img {
+  width: 50%;
+}
+
+form#form-login-password button#password-zaloguj {
+  margin-top: 50px;
+}
+
+p#message-login {
+  width: 50%;
+  background: rgba(220, 53, 69, 0.5);
+  border: 2px solid var(--red-color);
+  color: var(--text-black-color);
+  backdrop-filter: blur(10px);
+  border-radius: 30px;
+  display: block;
+  left: 50%;
+  top: 50px;
+  padding: 10px;
+  text-align: center;
+  transform: translateX(-50%);
+  position: absolute;
+  transition: all 0.5s ease-in-out;
+  opacity: 0;
+}
+
+html.dark-mode body ::-webkit-scrollbar-track {
+  background: var(--background-input-dark-color);
+}
+
+html.dark-mode body ::-webkit-scrollbar-thumb {
+  background: var(--button-dark-color);
+}
+
+html.dark-mode body ::-webkit-scrollbar-thumb:hover {
+  background: var(--button-hover-dark-color);
+}
+
+/* COLOR SCHEME */
+html.dark-mode body * {
+  color-scheme: dark;
+}
+
+/* DARK BACKGROUND */
+html.dark-mode body,
+html.dark-mode body .confirm-delete,
+html.dark-mode body .confirm-restore {
+  background: var(--background-dark-color);
+}
+
+/* DARK CONTAINER */
+html.dark-mode body form#form-login-password,
+html.dark-mode body form#form-login-pin,
+html.dark-mode body .centrala-uzytkownik-container,
+html.dark-mode body .sklep-uzytkownik-container,
+html.dark-mode body nav,
+html.dark-mode body .centrala-main-container,
+html.dark-mode body form#przypisywanie-uzytkownika,
+html.dark-mode body form#dodawanie-smaku,
+html.dark-mode body form#dodawanie-uzytkownika,
+html.dark-mode body form#dodawanie-rozmiaru,
+html.dark-mode body form#dodawanie-sklepu,
+html.dark-mode body .centrala-filtrowanie,
+html.dark-mode body form.ustawienia,
+html.dark-mode body form.serwis,
+html.dark-mode body .ulozenie-kuwet-container,
+html.dark-mode body .dostepne-kuwety-container,
+html.dark-mode body .sklep-wybor-towarow,
+html.dark-mode body .sklep-pozycje-wydania,
+html.dark-mode body .zamowienie-dostepne-kuwety,
+html.dark-mode body .zamowienie-dostepne-smaki,
+html.dark-mode body .zamowienie-zamowione-kuwety,
+html.dark-mode body p#zamowienia-info {
+  background: var(--background-container-dark-color);
+}
+
+/* DARK INPUT */
+html.dark-mode body input,
+html.dark-mode body select,
+html.dark-mode body table#pin-keyboard .pin-key,
+html.dark-mode body #przypisywanie-uzytkownika-sklepy,
+html.dark-mode body nav .dropdown-menu,
+html.dark-mode body .progress-container,
+html.dark-mode body .sklep-menu-btn:disabled,
+html.dark-mode body .ulozenie-kuwet-kuweta,
+html.dark-mode body span#wartosc-wydania,
+html.dark-mode body .apexcharts-menu,
+html.dark-mode body .wykres-container {
+  background: var(--background-input-dark-color);
+}
+
+/* DARK BUTTON */
+html.dark-mode body button,
+html.dark-mode body button#theme-toggle,
+html.dark-mode body table#pin-keyboard .pin-key:active,
+html.dark-mode body table#pin-keyboard .pin-key-action,
+html.dark-mode body nav a.logo,
+html.dark-mode body nav a.nav-link:hover,
+html.dark-mode body nav a.active,
+html.dark-mode body table#centrala-smaki thead th,
+html.dark-mode body table#centrala-uzytkownicy thead th,
+html.dark-mode body table#centrala-rozmiary thead th,
+html.dark-mode body table#centrala-sklepy thead th,
+html.dark-mode body table#centrala-kuwety thead th,
+html.dark-mode body table#centrala-rcp thead th {
+  background: var(--button-dark-color);
+}
+
+/* DARK BUTTON HOVER */
+html.dark-mode body button:hover,
+html.dark-mode body table#pin-keyboard .pin-key-action:hover,
+html.dark-mode body .centrala-uzytkownik-container button:hover,
+html.dark-mode body .sklep-uzytkownik-container button:hover {
+  background: var(--button-hover-dark-color) !important;
+}
+
+/* DARK BORDER */
+html.dark-mode body input,
+html.dark-mode body select,
+html.dark-mode body input:focus,
+html.dark-mode body select:focus,
+html.dark-mode body table#pin-keyboard .pin-key,
+html.dark-mode body #przypisywanie-uzytkownika-sklepy,
+html.dark-mode body .ulozenie-kuwet-kuweta {
+  border: 1px solid var(--border-dark-color);
+}
+
+/* DARK TEXT COLOR */
+html.dark-mode body,
+html.dark-mode body input,
+html.dark-mode body select,
+html.dark-mode body table#pin-keyboard .pin-key,
+html.dark-mode body table#pin-keyboard .pin-key:active,
+html.dark-mode body nav a.nav-link,
+html.dark-mode body .centrala-main-container,
+html.dark-mode body table#centrala-smaki thead th,
+html.dark-mode body table#centrala-uzytkownicy thead th,
+html.dark-mode body table#centrala-rozmiary thead th,
+html.dark-mode body table#centrala-sklepy thead th,
+html.dark-mode body table#centrala-kuwety thead th,
+html.dark-mode body table#centrala-rcp thead th,
+html.dark-mode body .progress-text,
+html.dark-mode body .ulozenie-kuwet-container h2,
+html.dark-mode body p#zamowienia-info,
+html.dark-mode body p#message-login {
+  color: var(--text-white-color);
+}
+
+/* DARK TEXT COMMENT COLOR */
+html.dark-mode body p#dodawanie-komentarz {
+  color: var(--button-dark-color);
+}
+
+html.dark-mode body .apexcharts-title-text,
+html.dark-mode body .wykres-container tspan,
+html.dark-mode body .apexcharts-legend-text,
+html.dark-mode body .apexcharts-menu-icon svg,
+html.dark-mode body .apexcharts-reset-icon svg,
+html.dark-mode body .apexcharts-zoom-icon svg,
+html.dark-mode body .apexcharts-zoomin-icon svg,
+html.dark-mode body .apexcharts-zoomout-icon svg {
+  fill: var(--text-white-color);
+  color: var(--text-white-color) !important;
+}
+
+html.dark-mode body p#zamowienia-info {
+  border: 2px solid var(--button-dark-color);
+}
